--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   <body class="bg-gray-900 text-white font-sans">
     <!-- Hero Section -->
     <section class="min-h-screen flex flex-col items-center justify-center text-center px-4">
-      <h1 class="text-5xl font-bold mb-4">Hi, I'm Mandip</h1>
+      <h1 class="text-5xl font-bold mb-4">Hi, I'm Mandip Sapkota</h1>
       <p class="text-xl text-gray-300 max-w-xl">
         Robotics enthusiast | Web Developer | Aspiring Engineer
       </p>
