--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <section class="min-h-screen flex flex-col items-center justify-center text-center px-4">
       <h1 class="text-5xl font-bold mb-4">Hi, I'm Mandip Sapkota</h1>
       <p class="text-xl text-gray-300 max-w-xl">
-        Robotics enthusiast | Web Developer | Aspiring Engineer
+        Robotics ,Ml and web enthusiast
       </p>
       <a href="#about" class="mt-6 inline-block bg-primary text-white px-6 py-3 rounded-xl hover:bg-cyan-700 transition">
         Explore More ↓
